...
        }
    }

    private fun validateName(): Boolean {
        if (plantEditState.value.plantName.isEmpty()) {
            plantEditFlow.update {
                it.copy(nameError = "Plant name can't be empty.")
            }
            return false
        } else {
            plantEditFlow.update {
                it.copy(nameError = "")
            }
...
        }
    }

    private fun validateSpecies(): Boolean {
        if (plantEditState.value.species.isEmpty()) {
            plantEditFlow.update {
                it.copy(speciesError = "Plant species can't be empty.")
            }
            return false
        } else {
            plantEditFlow.update {
                it.copy(speciesError = "")
            }
...
